--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -2,9 +2,24 @@
 :root {
     --black-color: #000;
     --white-color: #fff;
+    --white2-color: #f8f9fa;
     --gray-color: #343a40;
+    --gray2-color: #8b8c89;
     --dark-gray-color: #212529;
+    --light-gray-color: #f8f9fa;
+    --light-gray2-color: #adb5bd;
     --blue-color: #0466c8;
+    --blue2-color: #4265e1;
+    --blue3-color:#0043e3;
+    --dark-blue-color: #203369;
+    --red-color: #dc2f02;
+    --purple-color: #7b2cbf;
+    --violet-color: #6986d7;
+    --yellow-color: #fcbf49;
+    --orange-color: #f77f00;
+    --green-color: #76c893;
+    --green2-color: #61ae51;
+    --teal-color: #f6fdfe;
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
