--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1970,6 +1970,7 @@
                     .description {
                         color: var(--gray2-color);
                         font-size: .85rem;
+                        max-width: 75%;
                     }
 
                     .socials {
