--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -122,6 +122,7 @@ body {
             .row-group1 {
                 z-index: 2;
                 .testimonial {
+                    max-width: 750px;
                     p {
                         font-size: 2rem;
                         color: white;
@@ -197,6 +198,18 @@ body {
                         display: grid;
                         grid-template-columns: auto auto auto;
                         grid-template-rows: auto auto;
+                        .catalog-col1 {
+                            margin-bottom: 25px;
+                        }
+                        .catalog-col2 {
+                            margin-bottom: 25px;
+                        }
+                        .catalog-col3 {
+                            margin-bottom: 25px;
+                        }
+                        .catalog-col4 {
+                            margin-bottom: 25px;
+                        }
                     }
                 }
             }
@@ -212,18 +225,7 @@ body {
                         display: grid;
                         grid-template-columns: 1fr 1fr;
                         grid-template-rows: auto auto;
-                        .catalog-col1 {
-                            margin-bottom: 25px;
-                        }
-                        .catalog-col2 {
-                            margin-bottom: 25px;
-                        }
-                        .catalog-col3 {
-                            margin-bottom: 25px;
-                        }
-                        .catalog-col4 {
-                            margin-bottom: 25px;
-                        }
+                        
                     }
                 }
             }
