--- a/public/css/main.css
+++ b/public/css/main.css
@@ -178,6 +178,9 @@ body {
 .landing-page .landing-page__container .landing-page__credibility .row-group1 {
   z-index: 2;
 }
+.landing-page .landing-page__container .landing-page__credibility .row-group1 .testimonial {
+  max-width: 750px;
+}
 .landing-page .landing-page__container .landing-page__credibility .row-group1 .testimonial p {
   font-size: 2rem;
   color: white;
@@ -241,13 +244,6 @@ body {
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto;
   }
-}
-@media screen and (max-width: 525px) {
-  .landing-page .landing-page__container .landing-page__credibility .row-group2 .catalog {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
-  }
   .landing-page .landing-page__container .landing-page__credibility .row-group2 .catalog .catalog-col1 {
     margin-bottom: 25px;
   }
@@ -259,6 +255,13 @@ body {
   }
   .landing-page .landing-page__container .landing-page__credibility .row-group2 .catalog .catalog-col4 {
     margin-bottom: 25px;
+  }
+}
+@media screen and (max-width: 525px) {
+  .landing-page .landing-page__container .landing-page__credibility .row-group2 .catalog {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
   }
 }
 @media screen and (max-width: 385px) {
